# nucutils

./: README.md  configure
src/: CMakeLists.txt  convert.c  embed.c  getchar.c  getlen.c  h5utils.c  h5utils.h  htsutils.c  htsutils.h  open.py  squeeze.c
src/python/: getchar  getlen
